# stream-interface

./: LICENSE  README.md  docker-compose.yml  pyproject.toml
streaming/: __init__.py  base.py  octopus.py
streaming/plugins/: kafka.py  mofka.py  octopus.py  redpanda.py
tests/: kafka_test.py  mofka_test.py
tests/configs/: kafka_config.toml  octopus_config.toml  redpanda_config.toml
