[project]
name = "Diaspora-stream-api"
description = "API to swap between different streaming interfaces"
version = "0.0.1a"
authors = [
    { name = "Valerie Hayot-Sasson", email = "vhayot@uchicago.edu"    },
]
dependencies = [
    "diaspora-event-sdk"
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "tox"
]

docs = [
    "black",
    "mike",
    "mkdocs>=1.6.0",
    "mkdocs-autorefs>=1.1.0",
    "mkdocs-gen-files>=0.4.0",
    "mkdocs-get-deps>=0.2.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-material>=9.5.30",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-mermaid2-plugin>=1.1.1",
    "mkdocs-section-index>=0.3.9",
    "mkdocstrings>=0.26.0",
    "mkdocstrings-python>=1.11.0",
    "mkdocstrings[python]>=0.18",
]

[build-system]
# These are the assumed default build requirements from pip:
# https://pip.pypa.io/en/stable/reference/pip/#pep-517-and-518-support
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
extend-select = ["Q"]